oauth1-request-derive-ios/tests/ui/dummy_impl.stderr
error: unknown attribute `unknown`
 --> tests/ui/dummy_impl.rs:3:14
  |
3 |     #[oauth1(unknown)]
  |              ^^^^^^^
